# manga-inpaint

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  render.py  test.py  test_detect.py
.github/workflows/: docker-image.yml
